--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     "name": "deploy",
-    "description": "deploy mine on heroku",
+    "description": "deploy on heroku",
     "keywords": ["deploy test"],
     "website": "https://github.com/worldawa/deploy",
     "repository": "https://github.com/worldawa/deploy",
